--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,6 @@ html {
   -ms-text-size-adjust: 100%;
 }
 
-html,
-button,
-input,
-select,
-textarea {
-  font-family: sans-serif;
-}
-
 body {
   margin: 0;
 }
@@ -221,8 +213,6 @@ table {
 
 input[type=search] {
   -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
@@ -237,47 +227,60 @@ input[type=checkbox], input[type=radio] {
   align-self: flex-end;
 }
 
+.box-shadow {
+  box-shadow: 0 5px 20px #f0f0f0;
+}
+
+.section-header h2 {
+  font-family: "Bellota", sans-serif;
+}
+.section-header h2 {
+  font-size: 42px;
+}
+.section-header p {
+  font-family: "Roboto", sans-serif;
+}
+
 .nav-menu {
   display: flex;
   position: fixed;
   padding-left: 9%;
-  cursor: pointer;
   color: #30383b;
   height: 10vh;
   width: 55%;
   z-index: 1;
   background-color: white;
 }
-.nav-menu .logo-container {
-  background-image: url(../../img/logo-txt.png);
+.nav-menu .title-logo-container {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  background-image: url(../../img/logo-txt.png);
   flex-basis: 20%;
   min-width: 50px;
   position: relative;
 }
-.nav-menu ul {
+.nav-menu .menu-list {
   list-style-type: none;
   display: flex;
   justify-content: space-between;
   font-family: "Roboto", sans-serif;
 }
-.nav-menu ul .hamburger {
+.nav-menu .menu-list .hamburger {
   width: 55px;
   height: 9px;
   background-color: #1ba4ce;
   margin: 8px 0;
   display: none;
 }
-.nav-menu ul .hamburger label[for=drop-nav] {
+.nav-menu .menu-list .hamburger label[for=drop-nav] {
   display: none;
 }
-.nav-menu ul li {
+.nav-menu .menu-list li {
   display: list-item;
   margin-right: 4vw;
 }
-.nav-menu ul li .nav-item {
+.nav-menu .menu-list li .nav-item {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 15px;
@@ -285,25 +288,25 @@ input[type=checkbox], input[type=radio] {
   line-height: 7vh;
 }
 
-.main-header .header-left-container {
+.header .header-left-container {
   position: absolute;
   width: 12%;
   min-width: 50px;
   top: 30%;
   z-index: -1;
 }
-.main-header .header-left-container img {
+.header .header-left-container img {
   width: 100%;
 }
-.main-header .header-right-container {
+.header .header-right-container {
   position: absolute;
   right: 0;
   z-index: -1;
 }
-.main-header .header-right-container img {
+.header .header-right-container img {
   width: 40vw;
 }
-.main-header .main-header {
+.header .main-header {
   margin: 1% 0 0 9%;
   width: 50%;
   display: block;
@@ -311,24 +314,26 @@ input[type=checkbox], input[type=radio] {
   padding: 10vh 0;
   z-index: 1;
 }
-.main-header .main-header h5, .main-header .main-header h2 {
+.header .main-header h5, .header .main-header h2 {
   font-family: "Bellota", sans-serif;
 }
-.main-header .main-header h5 {
+.header .main-header h5 {
   text-transform: uppercase;
 }
-.main-header .main-header h2 {
+.header .main-header h2 {
   font-size: 50px;
 }
-.main-header .main-header p {
+.header .main-header p {
   font-family: "Roboto", sans-serif;
   font-size: 15px;
 }
-.main-header .main-header .header-ending {
+.header .main-header .header-ending {
   display: flex;
   padding: 20px 0;
 }
-.main-header .main-header .header-ending .btn {
+.header .main-header .header-ending .btn {
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
   background-color: #1ba4ce;
   width: 200px;
   height: 40px;
@@ -338,9 +343,9 @@ input[type=checkbox], input[type=radio] {
   text-align: center;
   line-height: 40px;
   font-size: 15px;
-  margin-right: 15px;
+  margin: 0 15px 0 0;
 }
-.main-header .main-header .header-ending .story-text {
+.header .main-header .header-ending .story-text {
   font-family: "Roboto", sans-serif;
   margin-left: 5px;
   font-weight: 200;
@@ -352,20 +357,16 @@ input[type=checkbox], input[type=radio] {
   margin: 5vh auto;
   text-align: center;
 }
-.about img {
+.about .logo-container img {
   width: 10%;
 }
-.about h5, .about h2 {
-  font-family: "Bellota", sans-serif;
-}
-.about h5 {
+.about .logo-container h5 {
   text-transform: uppercase;
-}
-.about h2 {
-  font-size: 42px;
+  font-weight: 200;
 }
 .about .btn-oval {
   display: inline-block;
+  font-family: "Roboto", sans-serif;
   background-color: #1ba4ce;
   width: 160px;
   height: 40px;
@@ -379,28 +380,27 @@ input[type=checkbox], input[type=radio] {
   border-radius: 20%/50%;
 }
 
-.about-img-container {
+.feature {
   display: flex;
-  height: 30vh;
+  flex-wrap: wrap;
 }
-.about-img-container .about-img-item {
+.feature .img-item {
   cursor: pointer;
   position: relative;
   flex-basis: 25%;
 }
-.about-img-container .about-img-item .shown {
+.feature .img-item .shown {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.about-img-container .about-img-item .hidden-img-container {
+.feature .img-item .hidden-img-container {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0;
   background-color: rgba(0, 123, 255, 0.75);
-  margin: 0;
   text-align: center;
   line-height: 200px;
   color: #fff;
@@ -409,16 +409,14 @@ input[type=checkbox], input[type=radio] {
   opacity: 0;
   transition: all 0.3s;
 }
-.about-img-container .about-img-item .hidden-img-container .hidden-img {
+.feature .img-item .hidden-img-container .hidden-img {
   position: absolute;
   width: 20%;
   top: 25%;
   left: 42%;
 }
-.about-img-container .about-img-item .hidden-img-container .hidden-header {
+.feature .img-item .hidden-img-container .hidden-header {
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 5%;
   top: 15.5%;
   left: 15%;
@@ -427,7 +425,7 @@ input[type=checkbox], input[type=radio] {
   font-weight: bold;
   text-align: center;
 }
-.about-img-container .about-img-item .hidden-img-container:hover {
+.feature .img-item .hidden-img-container:hover {
   opacity: 1;
 }
 
@@ -436,39 +434,34 @@ input[type=checkbox], input[type=radio] {
   margin: auto;
   text-align: center;
 }
-.procedures .section-header {
-  margin-bottom: 50px;
-}
-.procedures .section-header h5 {
-  font-family: "Bellota", sans-serif;
-  font-size: 42px;
-  margin: 1.2em;
-}
-.procedures .grid-container {
+
+.grid-container {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
 }
-.procedures .img-item {
-  flex-basis: 25%;
+.grid-container .img-item {
+  flex-basis: 28%;
   padding: 15px;
+  border: 1px groove;
   border-color: rgb(240, 240, 240);
   margin: 10px;
 }
-.procedures .img-item img {
+.grid-container img {
   width: 100%;
 }
-.procedures .img-item h7 {
+.grid-container h7 {
   font-family: "Bellota", sans-serif;
   font-size: 22px;
   display: block;
   margin: 12px;
 }
-.procedures .img-item .btn-oval {
+.grid-container .btn-oval {
   display: inline-block;
+  font-family: "Roboto", sans-serif;
   background-color: #1ba4ce;
   width: 50%;
-  min-width: 80px;
+  height: 40px;
   padding: 5px 2px;
   color: white;
   text-decoration: none;
@@ -476,12 +469,13 @@ input[type=checkbox], input[type=radio] {
   line-height: 40px;
   font-size: 15px;
   margin: 15px;
+  min-width: 80px;
   border-radius: 20%/50%;
 }
 
 .team {
   width: 80%;
-  margin: 10% auto;
+  margin: 0 auto 10% auto;
   text-align: center;
 }
 .team .section-header {
@@ -541,7 +535,7 @@ input[type=checkbox], input[type=radio] {
   cursor: pointer;
 }
 .team .img-item2 .footer-expanding .sm-container .fa-brands:hover {
-  background-color: green;
+  background-color: #473452;
   color: white;
 }
 
@@ -555,7 +549,7 @@ input[type=checkbox], input[type=radio] {
 }
 .form-section .form-img img {
   width: 100%;
-  height: 40vw;
+  height: 45vw;
 }
 .form-section .form-container {
   display: flex;
@@ -563,10 +557,10 @@ input[type=checkbox], input[type=radio] {
   flex-basis: 60%;
   background-color: #1ba4ce;
   overflow: hidden;
-  height: 40vw;
+  height: 45vw;
 }
 .form-section .form-container .form {
-  padding: 5% 25% 0% 10%;
+  padding: 5% 15% 0% 10%;
   overflow: hidden;
 }
 .form-section .form-container .form .input-common {
@@ -574,13 +568,13 @@ input[type=checkbox], input[type=radio] {
   border-width: 0 0 1px 0;
   border-color: white;
   color: white;
-  padding: 4%;
   text-align: left;
   margin-right: 15px;
-  line-height: 3.5vw;
   width: 30%;
   font-size: 0.8em;
   overflow: hidden;
+  padding: 4%;
+  line-height: 3.5vw;
 }
 .form-section .form-container .form #notes {
   padding: 4%;
@@ -589,20 +583,20 @@ input[type=checkbox], input[type=radio] {
 .form-section .form-container .form ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
   color: white;
   text-transform: uppercase;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 .form-section .form-container .form select {
   background-color: #1ba4ce;
   border-width: 0 0 1px 0;
   border-color: white;
   color: white;
-  text-transform: uppercase;
   text-align: left;
   margin-right: 15px;
-  height: 6.5vw;
   width: 38%;
-  overflow: hidden;
   font-size: 0.8em;
+  overflow: hidden;
+  text-transform: uppercase;
+  height: 20.5%;
   padding-left: 1vw;
 }
 .form-section .form-container .form .input-common:focus,
@@ -613,25 +607,27 @@ input[type=checkbox], input[type=radio] {
 }
 .form-section .form-container .form .btn-submit {
   display: inline-block;
+  font-family: "Roboto", sans-serif;
   background-color: white;
   width: 200px;
   height: 50px;
   padding: 5px 2px;
-  color: black;
+  color: white;
   text-decoration: none;
   text-align: center;
   line-height: 40px;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 15px;
   margin: 15px 20px;
+  color: black;
+  font-weight: 400;
   border-radius: 13%/50%;
   border-color: transparent;
   text-transform: uppercase;
 }
 
 .blog {
-  width: 70%;
-  margin: 100px auto;
+  width: 80%;
+  margin: auto;
   text-align: center;
 }
 .blog .section-header {
@@ -652,7 +648,6 @@ input[type=checkbox], input[type=radio] {
   padding: 15px;
   border-color: rgb(240, 240, 240);
   margin: 10px;
-  box-shadow: 0 5px 20px #f0f0f0;
 }
 .blog .img-item img {
   width: 100%;
@@ -660,7 +655,7 @@ input[type=checkbox], input[type=radio] {
 .blog .img-item h7 {
   font-family: "Bellota", sans-serif;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 15px;
   display: block;
   margin: 12px;
 }
@@ -774,19 +769,22 @@ input[type=checkbox], input[type=radio] {
 .contact .contact-container .form-container .contact-form .btn-submit {
   display: inherit;
   background-color: white;
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  background-color: white;
   width: 200px;
   height: 50px;
   padding: 5px 2px;
-  color: black;
+  color: white;
   text-decoration: none;
   text-align: center;
   line-height: 40px;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 15px;
   margin: 30px;
+  color: black;
+  font-weight: 400;
   border-radius: 13%/50%;
   border-color: transparent;
-  text-transform: uppercase;
 }
 
 .footer {
@@ -799,10 +797,10 @@ input[type=checkbox], input[type=radio] {
   background-color: white;
 }
 .footer .nav-menu2 .logo-container {
-  background-image: url(../../img/logo-txt.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  background-image: url(../../img/logo-txt.png);
   width: 7vw;
   height: 7vw;
   margin: auto;
@@ -831,21 +829,25 @@ input[type=checkbox], input[type=radio] {
 .footer .copyright h7 {
   font-family: "Bellota", sans-serif;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 16px;
   display: inline;
-  margin: 12px;
+  margin: 16px;
   text-align: center;
 }
 
 @media screen and (max-width: 992px) {
-  .nav-menu ul {
+  .nav-menu {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+  .nav-menu .menu-list {
     flex-direction: column;
     position: absolute;
     right: -60%;
     justify-content: right;
     padding-right: 10%;
   }
-  .nav-menu ul .hamburger {
+  .nav-menu .menu-list .hamburger {
     align-self: flex-end;
     margin-left: auto;
     padding-right: 1%;
@@ -855,20 +857,23 @@ input[type=checkbox], input[type=radio] {
     font-size: 2em;
     color: white;
   }
-  .nav-menu ul li,
-.nav-menu ul li .shown {
+  .nav-menu .menu-list li,
+.nav-menu .menu-list li .shown {
     margin-right: 0;
     width: 45vw;
     display: list-item;
     margin-right: 4vw;
     text-align: right;
-    color: white;
     background-color: #1ba4ce;
     padding-right: 5%;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 15px;
     line-height: 7vh;
+  }
+  .nav-menu .menu-list li .nav-item,
+.nav-menu .menu-list li .shown .nav-item {
+    color: white;
   }
   .nav-menu ul li .nav-item {
     display: none;
@@ -880,13 +885,36 @@ input[type=checkbox], input[type=radio] {
   .nav-menu ul .li-shown {
     content: "X";
     padding-right: 10%;
-    margin-right: -19px;
+    margin-right: 3.3%;
     width: 42.5vw;
   }
-  .nav-menu ul .hamburger {
+  .nav-menu .menu-list .hamburger {
     display: block;
   }
-  .main-header .header-right-container {
+  .header .header-right-container {
     display: none;
+  }
+  .header .main-header {
+    width: 80%;
+  }
+  .feature .img-item {
+    flex-basis: 50%;
+  }
+  .feature .img-item .hidden-img-container .hidden-header {
+    left: 32%;
+    top: 21.5%;
+  }
+  .blog,
+.team,
+.procedures {
+    width: 95%;
+  }
+  .form-section .form-img {
+    display: none;
+  }
+  .form-section .form-container {
+    flex-basis: 100%;
+    height: auto;
+    padding: 5% 5% 0% 0%;
   }
 }/*# sourceMappingURL=style.css.map */
