--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -1,3 +1,41 @@
 @mixin flex-container {
     display: flex;
 }
+
+@mixin img-in-div {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+@mixin btn($bg-color, $width, $height, $margin) {
+    display: inline-block;
+    font-family: "Roboto", sans-serif;
+    background-color: $bg-color;
+    width: $width;
+    height: $height;
+    padding: 5px 2px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    line-height: 40px;
+    font-size: $small;
+    margin: $margin;
+}
+@mixin oval {
+    border-radius: 20%/50%;
+}
+
+@mixin input-basics($width, $font-size) {
+    background-color: $blue;
+    border-width: 0 0 1px 0;
+    border-color: white;
+    color: white;
+    // padding: 4%;
+    text-align: left;
+    margin-right: 15px;
+    // line-height: 3.5vw;
+    width: $width;
+    font-size: $font-size;
+    overflow: hidden;
+}
