--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -8,14 +8,11 @@ $violet: #473452;
 $dark-grey: #30383b;
 
 // Size
-$smallest: 16px;
+$smallest: 12px;
 $small: 15px;
 $medium: 22px;
 $big: 42px;
 $biggest: 50px;
 
 // Boxes
-$box-shadow-default: 0 5px 20px #f0f0f0;
-
-// Input padding
-$input-padding: 4%
+$box-shadow: 0 5px 20px #f0f0f0;
